# aaf-labs-2022

./: .gitignore  CMakeLists.txt  README.md
Bondar_Kistaiev_FI-03/: CMakeLists.txt  README.md  main.cpp
Bondar_Kistaiev_FI-03/DataBase/: DataBase.cpp  DataBase.hpp
Bondar_Kistaiev_FI-03/Node/: Node.cpp  Node.hpp
Bondar_Kistaiev_FI-03/Parser/: Parser.cpp  Parser.hpp
Bondar_Kistaiev_FI-03/SystemContol/: SystemControl.cpp  SystemControl.hpp
Bondar_Kistaiev_FI-03/SystemControl/: SystemControl.cpp  SystemControl.hpp
Namchuk_FI-02_Khar_FI-02_var4/: Table.py  binaryTree.py  database.py  main.py  parser1.py
Skovron_FI04_Ghilevsky_FI_03/: .gitignore  TODO.txt
Skovron_FI04_Ghilevsky_FI_03/main/: Main.java
Skovron_FI04_Ghilevsky_FI_03/main/Controller/: Main.java  View.java
Skovron_FI04_Ghilevsky_FI_03/main/DataBase/: Row.java  Table.java
Skovron_FI04_Ghilevsky_FI_03/main/Parser/: Parser.java
Skovron_FI04_Ghilevsky_FI_03/test/: MainTest.java
Skovron_FI04_Ghilevsky_FI_03/test/CreateSelectTest/: SelectGroupByTest.java  SelectWhereTest.java
Skovron_FI04_Ghilevsky_FI_03/test/ParserTest/: CreateTest.java  InsertTest.java  SelectTest.java
[8] Oliferchuk_FB-01_Ivanilov_FB-06/: head.py  parse.py  searchtree.py  userinput.py
andriushkin_fe-01_cp_11/: .gitignore  CMakeLists.txt  README.md
andriushkin_fe-01_cp_11/include/: KDtree.hpp  commands.hpp  exec_manager.hpp
andriushkin_fe-01_cp_11/src/: KDtree.cpp  commands.cpp  exec_manager.cpp  lab.cpp
bochok_fb-03/: db_functions.py  functions.py  main.py  myparser1.py
burzhymskyi_fi-03_nedozhdii-fi-03_oaa14/: .gitignore  CMakeLists.txt  Parser.cpp  Parser.h  Tree.cpp  Tree.h  main.cpp
churikov_fi-01/: CMakeLists.txt  Parser.cpp  Parser.hpp  Program.cpp  Program.hpp  Request.hpp  Storage.cpp  Storage.hpp  Trie.cpp  Trie.hpp  main.cpp
cmd/project/: main.go
davydiuk_fi-04_cp6/: Cargo.toml
davydiuk_fi-04_cp6/src/: main.rs
doroshenko_fe-01_danilov_fe-01_cp6/: config.py  exceptions.py  lexer.py  parser.py  run.py  shell.py  test.py
doroshenko_fe-01_danilov_fe-01_cp6/DataBase/: Table.py  index.py
gnatyuk_poshyvak_FR02_lab/: Checker.py  Queries.py  custom_parser.py  db_engine.py  main.py  readme.docx
gnatyuk_poshyvak_FR02_lab/Databases/: main_db.senseidb
gnatyuk_poshyvak_lab/: Checker.py  custom_parser.py  db_engine.py  main.py
khomenko_fi-01_cp10/: .gitignore  CMakeLists.txt  README.md
khomenko_fi-01_cp10/src/: Exception.h  main.cpp
khomenko_fi-01_cp10/src/CLI/: CLI.cpp  CLI.h
khomenko_fi-01_cp10/src/DB/: DB.cpp  DB.h  DBImpl.cpp  DBImpl.h  DatabaseDAO.h
khomenko_fi-01_cp10/src/DB/RTree/: Point.h  RTree.cpp  RTree.h  Rectangle.h
khomenko_fi-01_cp10/src/Interpreter/: Interpreter.cpp  Interpreter.h  NodeVisitor.h
khomenko_fi-01_cp10/src/Lexer/: Lexer.cpp  Lexer.h
khomenko_fi-01_cp10/src/Parser/: ASTNode.h  CommandNode.h  IntegerNode.h  Parser.cpp  Parser.h  PointNode.h  SetNameNode.h
khomenko_fi-01_cp10/src/SystemControl/: SystemControl.cpp  SystemControl.h
medvedtskyi-kravchenko/: db.py  main.py  myparser.py
medvedtskyi-kravchenko/parser/: parser.py
nesterenko_fi-01_pochynok_fi-03/: go.mod
nesterenko_fi-01_pochynok_fi-03/cmd/project/: main.go
nesterenko_fi-01_pochynok_fi-03/internal/invinset/: invinset.go
nesterenko_fi-01_pochynok_fi-03/internal/parser/: parser.go  parser_test.go
pkg/invinset/: invinset.go
pkg/parser/: parser.go  parser_test.go
poshyvak_gnatyuk_FB02_lab1/: Parser.py
serkhovets_fb03_vashchenok_fb03/: BinTree.py  Lexer.py  MySQL.pickle  Operation.py  Pars1.py  Parser.py  Patterns.py  Tablet.py  Token.py  core.py  main.py  parser.py
src/: CLI.h  Exception.h  Lexer.h  Parser.cpp  Parser.h  Token.h  main.cpp
src/CLI/: CLI.cpp  CLI.h
src/Lexer/: Token.h
src/Parser/: Parser.h
src/test/: MainTest.java
task1/: main.py
volynets_fi-03/: .gitignore  CMakeLists.txt  DB_terminal.cpp  DB_terminal.h  Database.cpp  Database.h  MyTree.cpp  main  main.cpp  tempCodeRunnerFile.cpp  tests.cpp
yegorov_fi-03-kobets_fi-03_aaf_9/: README.md  commands.js  input.js  package-lock.json  package.json  parser.js
yegorov_fi-03-kobets_fi-03_aaf_9/log/: commandLog.json
(+17 files in other folders)
